src/base/objects/Account/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>The valuation of the company.</description>
    <inlineHelpText>The valuation of the company. This is a fairly loose metric, as a lot of these values are not public information, but use your best judgement.</inlineHelpText>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Cap (&lt; $150M)</fullName>
                <default>true</default>
                <label>Small Cap (&lt; $150M)</label>
            </value>
            <value>
                <fullName>Mid Cap ($150M &lt; $1B)</fullName>
            </value>
            <value>
                <fullName>Large Cap (&gt; $1B)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>