src/base/objects/Account/fields/Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Number__c</fullName>
    <businessOwnerGroup>Data_Owner_CX</businessOwnerGroup>
    <complianceGroup>CCPA</complianceGroup>
    <label>Tax ID Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>