src/base/objects/Account/fields/Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Test_Account__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <label>Test Account</label>
    <type>Checkbox</type>
</CustomField>