src/base/objects/Account/fields/Total_Value_Locked_TVL__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Locked_TVL__c</fullName>
    <description>SFCC-859</description>
    <label>Total Value Locked (TVL)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>