src/base/objects/Account/fields/Transaction_Volume_as_of__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Volume_as_of__c</fullName>
    <description>SFCC-859</description>
    <label>Transaction Volume as of</label>
    <type>Date</type>
</CustomField>