src/base/objects/Account/fields/Transaction_Volume_last_30d__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Volume_last_30d__c</fullName>
    <description>SFCC-859</description>
    <label>Transaction Volume (last 30d)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>