src/base/objects/Account/fields/Wallet_URL__c.field-meta.xml
<CustomField>
    <fullName>Wallet_URL__c</fullName>
    <description>SFCC-859</description>
    <label>Wallet URL</label>
    <type>Url</type>
</CustomField>