src/base/objects/Account/fields/YTD_Booked_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Booked_Revenue__c</fullName>
    <description>SFCC-1355: Calculate of Amount Sum of Current year Closed Won Opportunities</description>
    <label>YTD Booked Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosedDate_Current_Year__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>