src/base/objects/Account/recordTypes/Business_Development_Partnerships.recordType-meta.xml
<RecordType>
    <fullName>Business_Development_Partnerships</fullName>
    <active>true</active>
    <description>Business Development &amp; Partnerships Accounts</description>
    <label>Business Development &amp; Partnerships</label>
</RecordType>