src/base/objects/Account/recordTypes/Cloud_Account.recordType-meta.xml
<RecordType>
    <fullName>Cloud_Account</fullName>
    <active>true</active>
    <label>Cloud Account</label>
</RecordType>