src/base/objects/Account/recordTypes/Institutional.recordType-meta.xml
<RecordType>
    <fullName>Institutional</fullName>
    <active>true</active>
    <label>Institutional</label>
</RecordType>