src/base/objects/Account/listViews/My_BD_Accounts.listView-meta.xml
<ListView>
    <fullName>My_BD_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Type__c</columns>
    <columns>Product_Interest__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Development_Partnerships</value>
    </filters>
    <label>My BD Accounts</label>
    <sharedTo>
        <group>BD_Public_Group</group>
    </sharedTo>
</ListView>